Cria o endpoint de excluir
